@@ -1,5 +1,3 @@
--rename card set dialog: prefill with existing name
-
 -ltr issues: [They revealed]...
 
 -merging cards: should give an option to go back and edit?
